--- a/material.yaml
+++ b/material.yaml
@@ -1,7 +1,6 @@
 
 
 
-
 * Python has the following data types built-in by default, in these categories:
  - Text Type:	str
  - Numeric Types:	int, float, complex
@@ -16,5 +15,91 @@
        1: STRING
 ---------------------------------------
 * In Python, a string is a sequence of characters. For example, "hello" is a string containing a sequence of characters 'h', 'e', 'l', 'l', and 'o'.
+  We use single quotes or double quotes to represent a string in Python. 
 
-We use single quotes or double quotes to represent a string in Python. 
+---------------------------------------
+      2: Numeric
+---------------------------------------
+*a. int: Represents integers, which are whole numbers, positive or negative.
+        	a = 10 # Example of an integer
+b.	float: Represents floating-point numbers (decimals).
+        	b = 10.5 # Example of a float
+c.	complex: Used for complex numbers, consisting of a real and an imaginary part.
+        	c = 2 + 3j # Example of a complex number
+
+Day-2
+======
+Keywords in Python:
+-------------------------------------------
+Keywords are reserved words in Python that have predefined meanings and cannot be used as variable names or identifiers. These words are used to define the structure and logic of the program. They are an integral part of the Python language and are case-sensitive, which means you must use them exactly as specified.
+
+Here are some important Python keywords:
+
+- and: It is a logical operator that returns True if both operands are true.
+
+- or: It is a logical operator that returns True if at least one of the operands is true.
+
+- not: It is a logical operator that returns the opposite of the operand's truth value.
+
+- if: It is used to start a conditional statement and is followed by a condition that determines whether the code block is executed.
+
+- else: It is used in conjunction with if to define an alternative code block to execute when the if condition is False.
+
+- elif: Short for "else if," it is used to check additional conditions after an if statement and is used in combination with if and else.
+
+- while: It is used to create a loop that repeatedly executes a block of code as long as a specified condition is true.
+
+- for: It is used to create a loop that iterates over a sequence (such as a list, tuple, or string) and executes a block of code for each item in the sequence.
+
+- in: Used with for, it checks if a value is present in a sequence.
+
+- try: It is the beginning of a block of code that is subject to exception handling. It is followed by except to catch and handle exceptions.
+
+- except: Used with try, it defines a block of code to execute when an exception is raised in the corresponding try block.
+
+- finally: Used with try, it defines a block of code that is always executed, whether an exception is raised or not.
+
+- def: It is used to define a function in Python.
+
+- return: It is used within a function to specify the value that the function should return.
+
+- class: It is used to define a class, which is a blueprint for creating objects in object-oriented programming.
+
+- import: It is used to import modules or libraries to access their functions, classes, or variables.
+
+- from: Used with import to specify which specific components from a module should be imported.
+
+- as: Used with import to create an alias for a module, making it easier to reference in the code.
+
+- True: It represents a boolean value for "true."
+
+- False: It represents a boolean value for "false."
+
+- None: It represents a special null value or absence of value.
+
+- is: It is used for identity comparison, checking if two variables refer to the same object in memory.
+
+- lambda: It is used to create small, anonymous functions (lambda functions).
+
+- with: It is used for context management, ensuring that certain operations are performed before and after a block of code.
+
+- global: It is used to declare a global variable within a function's scope.
+
+- nonlocal: It is used to declare a variable as nonlocal, which allows modifying a variable in an enclosing (but non-global) scope.
+
+We can see all the list of available keywords using below simple python program.
+
+    - import keyword 
+    - print(keyword.kwlist)
+
+--------------------
+  variables
+------------------------
+* a variable is a named storage location used to store data. Variables are essential for programming as they allow us to work with data, manipulate it, and make our code more flexible and reusable.
+  
+  Variable Scope and Lifetime:
+  ---------------------------
+Variable Scope: In Python, variables have different scopes, which determine where in the code the variable can be accessed. There are mainly two types of variable scopes:
+
+1.Local Scope: Variables defined within a function have local scope and are only accessible inside that function.
+2.Global Scope: Variables defined outside of any function have global scope and can be accessed throughout the entire code.
